--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "dev:server": "cross-env NODE_ENV=development tsx server/index.ts",
-    "dev:camera": "python hardware/camera_script.py",
+    "dev:camera": "python hardware/camera_script.py --ocr",
     "dev:all": "concurrently \"npm run dev:server\" \"npm run dev:camera\"",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
